Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11234

connect storage engine unable to read escape character in quote from CSV

    XMLWordPrintable

Details

    Description

      The table is created as follows

      create table audit_log (
          logtime char(17),  
          serverhost varchar(128), 
          username varchar(128), 
          host varchar(128), 
          connectionid int unsigned,  
          queryid int unsigned,  
          operation varchar(128), 
          databasename varchar(128), 
          object varchar(512), 
          retcode int unsigned
      )  
          engine=CONNECT table_type=CSV 
          file_name='/home/mysql/test/server_audit.log' 
          data_charset='utf8' QCHAR='''' quoted=1;
      

      When reading the following line of data

       20161102 10:24:41,luovm1,root,localhost,5,17,QUERY,,'load data infile \'discounts.csv\'',1046
      

      There is the following error

      > select * from audit_log limit 20;
      ERROR 1296 (HY000): Got error 122 'Missing field 9 in audit_log1 line 20' from CONNECT
      

      Any insights will be appreciated.

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            bamboowind Daniel Luo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.